--- a/envs/fastp.yml
+++ b/envs/fastp.yml
@@ -3,12 +3,18 @@ channels:
   - bioconda
   - defaults
   - conda-forge
+  - r
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
   - fastp=0.20.1=h2e03b76_1
-  - libgcc-ng=9.3.0=h2828fa1_19
-  - libgomp=9.3.0=h2828fa1_19
+  - fastplong=0.2.2=heae3180_0
+  - isa-l=2.31.0=h4bc722e_2
+  - libdeflate=1.22=hb9d3cd8_0
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgomp=14.2.0=h77fa898_1
+  - libstdcxx=14.2.0=hc0a3c3a_1
   - libstdcxx-ng=9.3.0=h6de172a_19
   - zlib=1.2.11=h7b6447c_3
 prefix: /project2/gilad/bjf79_project1/envs/fastp
