add diff expression

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,8 +12,8 @@ STAR_genomes: config/STAR_Genome_List.tsv
 #Prefix for all ReferenceGenomes files... STAR index will be made at {GenomesPrefix}{GenomeName}/
 GenomesPrefix: "/project2/yangili1/bjf79/ReferenceGenomes/"
 
-# contrast_file three column tsv for each differential splicing and differential expression to perform
-contrast_file: config/contrasts.tsv
+# contrast group_files for differential splicing and differential expression should match {contrast_group_files_prefix}{ContrastName}.txt
+contrast_group_files_prefix: config/contrast_groups/
 
 #Scratch dir for large temporary files
 scratch: "/scratch/midway2/bjf79/"
