--- a/envs/minimap2.yml
+++ b/envs/minimap2.yml
@@ -1,38 +1,39 @@
 name: minimap2
 channels:
-  - bioconda
-  - defaults
   - conda-forge
+  - bioconda
   - r
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - _sysroot_linux-64_curr_repodata_hack=3=haa98f57_10
-  - bzip2=1.0.8=h5eee18b_6
-  - c-ares=1.34.3=hb9d3cd8_1
-  - ca-certificates=2024.11.26=h06a4308_0
-  - htslib=1.21=h5efdd21_0
-  - k8=1.2=h6618dc6_3
-  - kernel-headers_linux-64=3.10.0=h57e8cba_10
-  - krb5=1.21.3=h143b758_0
-  - libcurl=8.11.1=h332b0f4_0
-  - libdeflate=1.21=h4bc722e_0
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgomp=14.2.0=h77fa898_1
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.5=hb9d3cd8_0
+  - ca-certificates=2025.6.15=hbd8a1cb_0
+  - htslib=1.22=h566b1c6_0
+  - k8=1.2=he8db53b_6
+  - kernel-headers_linux-64=3.10.0=he073ed8_18
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
+  - libcurl=8.14.1=h332b0f4_0
+  - libdeflate=1.24=h86f0d12_0
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libev=4.33=hd590300_2
+  - libgcc=15.1.0=h767d61c_3
+  - libgcc-ng=15.1.0=h69a702a_3
+  - libgomp=15.1.0=h767d61c_3
+  - liblzma=5.8.1=hb9d3cd8_2
   - libnghttp2=1.64.0=h161d5f1_0
-  - libssh2=1.11.1=hf672d98_0
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-ng=14.2.0=h4852527_1
+  - libssh2=1.11.1=hcf80075_0
+  - libstdcxx=15.1.0=h8f9b012_3
+  - libstdcxx-ng=15.1.0=h4852527_3
+  - libxcrypt=4.4.36=hd590300_1
   - libzlib=1.3.1=hb9d3cd8_2
-  - minimap2=2.28=he4a0461_3
-  - ncurses=6.5=he02047a_1
-  - openssl=3.4.0=hb9d3cd8_0
-  - python_abi=3.12=5_cp312
-  - samtools=1.21=h50ea8bc_0
-  - sysroot_linux-64=2.17=h57e8cba_10
-  - xz=5.4.6=h5eee18b_1
-  - zstd=1.5.6=ha6fb4c9_0
+  - minimap2=2.30=h577a1d6_0
+  - ncurses=6.5=h2d0b736_3
+  - openssl=3.5.0=h7b32b05_1
+  - perl=5.32.1=7_hd590300_perl5
+  - samtools=1.22=h96c455f_0
+  - sysroot_linux-64=2.17=h0157908_18
+  - tzdata=2025b=h78e105d_0
+  - zstd=1.5.7=hb8e6e7a_2
 prefix: /project2/gilad/bjf79_project1/envs/minimap2
