--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "scripts/leafcutter2"]
 	path = scripts/leafcutter2
 	url = git@github.com:bfairkun/leafcutter2.git
-[submodule "scripts/leafcutter2_carlos"]
-	path = scripts/leafcutter2_carlos
-	url = git@github.com:cfbuenabadn/leafcutter2.git
+[submodule "scripts/leafcutter2_chao"]
+	path = scripts/leafcutter2_chao
+	url = git@github.com:archieboo/leafcutter2.git
